reference/k/snapshots/compound-types-chained-field-access.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-chained-field-access.cdz
---
# compound-types-chained-field-access

## Input

```cadenza
let nested = { inner = { value = 42 } }
nested.inner.value
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 99 104 97 105 110 101 100 45 102 105 101 108 100 45 97 99 99 101 115 115 46 99 100 122) (Span (0 40) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 110 101 115 116 101 100)) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 105 110 110 101 114) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 118 97 108 117 101) (Integer 42))))))) (Span (40 58) (Apply (Op 46) (Apply (Op 46) (Ident 110 101 115 116 101 100) (Ident 105 110 110 101 114)) (Ident 118 97 108 117 101))))
```

## Expected

```
() : Unit
42 : Integer
```

## K Output

```
<k>
  42 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "nested" |-> record ( "inner" |-> record ( "value" |-> 42 ) ) )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/compound-types-chained-field-access.cdz"
</file>
<span-start>
  40
</span-start>
<span-end>
  58
</span-end>
```

