reference/k/snapshots/compound-types-empty-list.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-empty-list.cdz
---
# compound-types-empty-list

## Input

```cadenza
[]
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 101 109 112 116 121 45 108 105 115 116 46 99 100 122) (Span (0 2) (Apply (Synthetic 95 95 108 105 115 116 95 95))))
```

## Expected

```
[] : [Unknown]
```

## K Output

```
<generatedTop>
  <k>
    list ( .List ) ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/compound-types-empty-list.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    2
  </span-end>
</generatedTop>
```

