reference/k/snapshots/compound-types-empty-record.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-empty-record.cdz
---
# compound-types-empty-record

## Input

```cadenza
{}
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 101 109 112 116 121 45 114 101 99 111 114 100 46 99 100 122) (Span (0 2) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95))))
```

## Expected

```
{} : {}
```

## K Output

```
<k>
  record ( .Map ) ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , .Map )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/compound-types-empty-record.cdz"
</file>
<span-start>
  0
</span-start>
<span-end>
  2
</span-end>
```

