reference/k/snapshots/compound-types-empty-tuple-_unit_.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-empty-tuple-_unit_.cdz
---
# compound-types-empty-tuple-_unit_

## Input

```cadenza
()
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 101 109 112 116 121 45 116 117 112 108 101 45 95 117 110 105 116 95 46 99 100 122) (Span (1 2) (Apply (Synthetic 95 95 116 117 112 108 101 95 95))))
```

## Expected

```
() : Unit
```

## K Output

```
<generatedTop>
  <k>
    tuple ( .List ) ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/compound-types-empty-tuple-_unit_.cdz"
  </file>
  <span-start>
    1
  </span-start>
  <span-end>
    2
  </span-end>
</generatedTop>
```

