reference/k/snapshots/compound-types-field-access-on-expression.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-field-access-on-expression.cdz
---
# compound-types-field-access-on-expression

## Input

```cadenza
fn make_point x y = { x, y }
(make_point 5 10).x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 102 105 101 108 100 45 97 99 99 101 115 115 45 111 110 45 101 120 112 114 101 115 115 105 111 110 46 99 100 122) (Span (0 29) (Apply (Op 61) (Apply (Apply (Apply (Ident 102 110) (Ident 109 97 107 101 95 112 111 105 110 116)) (Ident 120)) (Ident 121)) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Ident 120) (Ident 121)))) (Span (29 48) (Apply (Op 46) (Apply (Apply (Ident 109 97 107 101 95 112 111 105 110 116) (Integer 5)) (Integer 10)) (Ident 120))))
```

## Expected

```
() : Unit
5 : Integer
```

## K Output

```
<k>
  5 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "make_point" |-> closure ( "make_point" , ListItem ( "x" )
  ListItem ( "y" ) , ( Apply ( Synthetic 95  95  114  101  99  111  114  100  95  95  .Chars ) ( Ident 120  .Chars )  ( Ident 121  .Chars )  .Exprs ) , "make_point" |-> pending ( "make_point" ) ) )
  1 |-> scope ( 0 , "make_point" |-> pending ( "make_point" )
  "x" |-> 5
  "y" |-> 10 )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  2
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/compound-types-field-access-on-expression.cdz"
</file>
<span-start>
  29
</span-start>
<span-end>
  48
</span-end>
```

