reference/k/snapshots/compound-types-list-from-variables.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-list-from-variables.cdz
---
# compound-types-list-from-variables

## Input

```cadenza
let x = 10
let y = 20
[x, y, x + y]
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 108 105 115 116 45 102 114 111 109 45 118 97 114 105 97 98 108 101 115 46 99 100 122) (Span (0 11) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 10))) (Span (11 22) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 121)) (Integer 20))) (Span (22 35) (Apply (Synthetic 95 95 108 105 115 116 95 95) (Ident 120) (Ident 121) (Apply (Op 43) (Ident 120) (Ident 121)))))
```

## Expected

```
() : Unit
() : Unit
[10, 20, 30] : [Integer]
```

## K Output

```
<generatedTop>
  <k>
    list ( ListItem ( 10 )
    ListItem ( 20 )
    ListItem ( 30 ) ) ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "x" |-> 10
    "y" |-> 20 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/compound-types-list-from-variables.cdz"
  </file>
  <span-start>
    22
  </span-start>
  <span-end>
    35
  </span-end>
</generatedTop>
```

