reference/k/snapshots/compound-types-nested-lists.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-nested-lists.cdz
---
# compound-types-nested-lists

## Input

```cadenza
[[1, 2], [3, 4], [5, 6]]
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 110 101 115 116 101 100 45 108 105 115 116 115 46 99 100 122) (Span (0 24) (Apply (Synthetic 95 95 108 105 115 116 95 95) (Apply (Synthetic 95 95 108 105 115 116 95 95) (Integer 1) (Integer 2)) (Apply (Synthetic 95 95 108 105 115 116 95 95) (Integer 3) (Integer 4)) (Apply (Synthetic 95 95 108 105 115 116 95 95) (Integer 5) (Integer 6)))))
```

## Expected

```
[[1, 2], [3, 4], [5, 6]] : [[Integer]]
```

## K Output

```
<generatedTop>
  <k>
    list ( ListItem ( list ( ListItem ( 1 )
    ListItem ( 2 ) ) )
    ListItem ( list ( ListItem ( 3 )
    ListItem ( 4 ) ) )
    ListItem ( list ( ListItem ( 5 )
    ListItem ( 6 ) ) ) ) ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/compound-types-nested-lists.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    24
  </span-end>
</generatedTop>
```

