reference/k/snapshots/compound-types-nested-records.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-nested-records.cdz
---
# compound-types-nested-records

## Input

```cadenza
{ point = { x = 10, y = 20 }, label = "origin" }
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 110 101 115 116 101 100 45 114 101 99 111 114 100 115 46 99 100 122) (Span (0 48) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 112 111 105 110 116) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 120) (Integer 10)) (Apply (Op 61) (Ident 121) (Integer 20)))) (Apply (Op 61) (Ident 108 97 98 101 108) (String 111 114 105 103 105 110)))))
```

## Expected

```
{ point = { x = 10, y = 20 }, label = "origin" } : { point: { x: Integer, y: Integer }, label: String }
```

## K Output

```
<k>
  record ( "label" |-> "origin"
  "point" |-> record ( "x" |-> 10
  "y" |-> 20 ) ) ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , .Map )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/compound-types-nested-records.cdz"
</file>
<span-start>
  0
</span-start>
<span-end>
  48
</span-end>
```

