reference/k/snapshots/compound-types-nested-tuples.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-nested-tuples.cdz
---
# compound-types-nested-tuples

## Input

```cadenza
((1, 2), (3, 4))
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 110 101 115 116 101 100 45 116 117 112 108 101 115 46 99 100 122) (Span (1 16) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Integer 1) (Integer 2)) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Integer 3) (Integer 4)))))
```

## Expected

```
((1, 2), (3, 4)) : ((Integer, Integer), (Integer, Integer))
```

## K Output

```
<generatedTop>
  <k>
    tuple ( ListItem ( tuple ( ListItem ( 1 )
    ListItem ( 2 ) ) )
    ListItem ( tuple ( ListItem ( 3 )
    ListItem ( 4 ) ) ) ) ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/compound-types-nested-tuples.cdz"
  </file>
  <span-start>
    1
  </span-start>
  <span-end>
    16
  </span-end>
</generatedTop>
```

