reference/k/snapshots/compound-types-record-with-computed-values.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-record-with-computed-values.cdz
---
# compound-types-record-with-computed-values

## Input

```cadenza
{ x = 2 + 3, y = 10 * 5 }
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 114 101 99 111 114 100 45 119 105 116 104 45 99 111 109 112 117 116 101 100 45 118 97 108 117 101 115 46 99 100 122) (Span (0 25) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 120) (Apply (Op 43) (Integer 2) (Integer 3))) (Apply (Op 61) (Ident 121) (Apply (Op 42) (Integer 10) (Integer 5))))))
```

## Expected

```
{ x = 5, y = 50 } : { x: Integer, y: Integer }
```

## K Output

```
<k>
  record ( "x" |-> 5
  "y" |-> 50 ) ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , .Map )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/compound-types-record-with-computed-values.cdz"
</file>
<span-start>
  0
</span-start>
<span-end>
  25
</span-end>
```

